# whisper-tts

./: README.md  main.py  pyproject.toml
